cmake_minimum_required(VERSION 3.5)
project (injectlib)
set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -Wall -std=c11 -fPIC")
set (CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -O3 -Wall -std=c++11 -fPIC")
add_library (inject_ser_noff SHARED libinject_ser_noff.c mt64.c)
add_library (inject_omp_noff SHARED libinject_omp_noff.c mt64.c)
add_library (inject_ser SHARED libinject_ser.c mt64.c)
add_library (inject_omp SHARED libinject_omp.c mt64.c)
install (TARGETS inject_ser_noff inject_omp_noff inject_ser inject_omp DESTINATION $ENV{HOME}/usr/local/lib)
